# pyOFSC

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST  README.md  REQUIREMENTS.md  SECURITY.md  TEST_EXECUTION_SUMMARY.md  justfile  mockup_requests.py  output.xlsx  pyproject.toml  pytest-mixed.ini  setup.py  test.html  ~$output.xlsx
.github/workflows/: poetrypublish  poetrypublish.yml  publish.yml  release.yml  test-parallel.yml  test.yml
docs/: ENDPOINTS.md  PARALLEL_TESTING.md  TESTING-HOWTO.md  backward-compatibility.md  swagger.json  v3-architecture-analysis.md  v3-design-decisions.md  v3-implementation-gaps.md  v3-implementation-plan.md  v3-implementation-tracker.md  v3-testing-strategy.md
docs/testing_plan/: base-test-class.py  claude-code-prompts.md  example-endpoint-test.py  parameter-test-framework.py  project-structure-setup.sh  swagger-based-test-example.py  testing-implementation-plan-detailed.md
examples/: Pipfile.examples  README.md  async_antipatterns.py  async_basic_usage.py  async_get_all_workzones.py  async_parallel_pagination.py  async_parallel_requests.py  compat_example.py  config.py  export_routing_plans.py  get_capacity_areas.py  get_users_simple.py  get_work_skill_conditions.py  get_workzones.py  profile_parallel_pagination.py
ofsc/: __init__.py  auth.py  capacity.py  common.py  compat.py  core.py  exceptions.py  metadata.py  models.py  oauth.py  ofsc_proxy.py  retry.py
ofsc/async_client/: __init__.py  _base.py  _http_config.py  _protocols.py  capacity.py  core.py  metadata.py  oauth.py  statistics.py
ofsc/client/: __init__.py  async_client.py  base.py  capacity_api.py  core_api.py  metadata_api.py  ofsc_client.py  response_handler.py  sync_client.py
ofsc/compat/: __init__.py  generators.py  method_mappings.py  wrapper.py
ofsc/models/: __init__.py  _base.py  auth.py  base.py  capacity.py  core.py  inventories.py  metadata.py  resources.py  statistics.py  users.py
ofsc/testing/: __init__.py  client_wrapper.py  rate_limiter.py
ofsc/tests/: OFSC_activities_test.py  OFSC_properties_test.py  OFSC_resources_test.py  OFSC_test.py  OFSC_users_test.py
scripts/: README.md  analyze_endpoint_model.py  analyze_get_endpoints_coverage.py  capture_api_responses.py  capture_routing_profiles.py  collect_endpoint_response.py  collect_multiple_responses.py  compare_endpoints_sources.py  extract_endpoints.py  extract_endpoints_backup.py  extract_models.py  generate_model_validation_tests.py  generate_tests.py  measure_test_performance.py  run_tests_parallel.py  update_endpoints_doc.py
tests/: OFSC_activities_test.py  OFSC_metadata_test.py  OFSC_properties_test.py  OFSC_resources_test.py  OFSC_test.py  README.md  REQUIREMENTS_TEST_MAPPING.md  TEST_EXECUTION_SUMMARY.md  __init__.py  config.py  conftest.py  test_base.py  test_core_activities.py  test_core_resources.py  test_core_subscriptions.py  test_core_users.py  test_get_activities_params.py  test_metadata.py  test_model.py  test_token.py  v3-testing-strategy.md
tests/async/: __init__.py  conftest.py  test_async_activities.py  test_async_activity_type_groups.py  test_async_activity_types.py  test_async_applications.py  test_async_base_helpers.py  test_async_capacity.py  test_async_capacity_areas.py  test_async_capacity_categories.py  test_async_daily_extract.py  test_async_exceptions.py  test_async_forms.py  test_async_http_config.py  test_async_inventories.py  test_async_inventory_types.py  test_async_languages.py  test_async_link_templates.py  test_async_map_layers.py  test_async_metadata_roundtrip.py  test_async_metadata_write.py  test_async_non_working_reasons.py  test_async_oauth.py  test_async_ofsc.py  test_async_organizations.py  test_async_plugins.py  test_async_populate_status.py  test_async_properties.py  test_async_resource_types.py  test_async_resources_get.py  test_async_resources_write.py  test_async_routing_profiles.py  test_async_shifts.py  test_async_statistics.py  test_async_subscriptions.py  test_async_time_slots.py  test_async_users.py  test_async_workskills.py  test_async_workzones.py  test_metadata_model_audit.py
tests/capacity/: README.md  __init__.py  real_responses.json  test_capacity_integration.py  test_capacity_mocked.py  test_quota_integration.py  test_quota_mocked.py  test_real_quota_validation.py
tests/core/: test_activities.py  test_daily.py  test_resources.py  test_subscriptions.py  test_users.py
tests/end_to_end/: conftest_sunrise_metadata.py  test_sunrise_auth.py  test_sunrise_metadata.py  test_sunrise_metadata_get.py  test_sunrise_metadata_put.py
tests/fixtures/: endpoints_registry.py  models_registry.py
tests/integration/: test_properties_demo.py  test_users_comprehensive.py
tests/live/: __init__.py  test_auth_live.py
tests/metadata/: test_activity_groups_types.py  test_activity_type.py  test_applications.py  test_capacity_areas.py  test_capacity_categories.py  test_inventory_types.py  test_organizations.py  test_plugins.py  test_properties.py  test_resource_types.py  test_routing_profiles.py  test_routing_profiles_write.py  test_timeslots.py  test_workskilll_groups.py  test_workskills.py  test_workzones.py
tests/models/: test_all_models_integration.py  test_all_response_examples.py  test_capacity_models.py  test_capacity_models_validation.py  test_core_models.py  test_core_models_validation.py  test_endpoints_capacity.py  (+4 more)
(+32 files in other folders)
