[project]
name = "ofsc"
version = "3.0.0-dev"
description = "Python wrapper for Oracle Field Service API"
authors = [{ name = "Borja Toron", email = "borja.toron@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.6.3,<3",
    "cachetools>=5.3.1,<6",
    "pydantic-settings>=2.2.1,<3",
]

[project.urls]
Repository = "https://github.com/btoron/pyOFSC"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-xdist>=3.3.0,<4",
    "pytest-rerunfailures>=12.0,<13",
    "respx>=0.21.0,<1",
    "pyarmor>=7.6.0,<8",
    "Faker>=14.2.0,<15",
    "openpyxl>=3.0.10,<4",
    "pyjwt>=2.10.1,<3",
    "cryptography>=44.0.0,<45",
    "pytest-env>=1.1.5,<2",
    "python-dotenv>=1.0.1,<2",
    "ruff>=0.12.0,<1",
    "mypy>=1.16.0,<2",
    "types-cachetools>=6.0.0.20250525",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope = "function"
# Parallel execution configuration
addopts = "--maxfail=3"
markers = [
    "unit: marks tests as unit tests (no external dependencies)",
    "integration: marks tests as integration tests (may require live credentials)",
    "live: marks tests as live environment tests (requires real OFSC instance)",
    "slow: marks tests as slow running tests"
]

[tool.pytest_env]
RUN_ENV = 1
# Parallel execution control
PYTEST_DISABLE_PARALLEL = "false"
PYTEST_WORKERS = ""
PYTEST_RATE_LIMITED = "false"
