[project]
name = "ofsc"
version = "2.22.0"
description = "Python wrapper for Oracle Field Service API"
authors = [{ name = "Borja Toron", email = "borja.toron@gmail.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.28.1,<3",
    "pydantic>=2.6.3,<3",
    "cachetools>=5.3.1,<6",
    "pydantic-settings>=2.2.1,<3",
    "httpx[http2]>=0.27.0,<1",
]

[project.urls]
Repository = "https://github.com/btoron/pyOFSC"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=6.0.0,<7",
    "pyarmor>=7.6.0,<8",
    "Faker>=14.2.0,<15",
    "openpyxl>=3.0.10,<4",
    "pyjwt>=2.10.1,<3",
    "cryptography>=44.0.0,<45",
    "pytest-env>=1.1.5,<2",
    "python-dotenv>=1.0.1,<2",
    "pytablewriter>=1.2.1,<2",
    "pyright>=1.1.390,<2",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist worksteal -m 'not serial'"
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "uses_real_data: marks tests that use real API data (requires credentials)",
    "serial: marks tests that must run sequentially (not in parallel)",
]

[tool.pytest_env]
RUN_ENV = 1
