[project]
name = "ofsc"
version = "2.24.3"
description = "Python wrapper for Oracle Field Service API"
authors = [{ name = "Borja Toron", email = "borja.toron@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.32.4,<3",
    "pydantic>=2.12.5,<3",
    "cachetools>=5.5.0",
    "pydantic-settings>=2.6.1,<3",
    "httpx[http2]>=0.28.1,<1",
]

[project.urls]
Repository = "https://github.com/btoron/pyOFSC"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.3.0",
    "Faker>=14.2.1",
    "openpyxl>=3.1.5,<4",
    "pyjwt>=2.10.1,<3",
    "cryptography>=46.0.5,<47",
    "pytest-env>=1.1.5,<2",
    "python-dotenv>=1.0.1,<2",
    "pytablewriter>=1.2.1,<2",
    "pyright>=1.1.407,<2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-n auto --dist worksteal -m 'not serial'"
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "uses_real_data: marks tests that use real API data (requires credentials)",
    "uses_local_data: marks tests that depend on local data files not available in CI (e.g. saved_responses/)",
    "serial: marks tests that must run sequentially (not in parallel)",
]

[tool.ruff]
line-length = 150
exclude = [
    "examples/",
    "tests/metadata/",
    "tests/core/",
    "tests/capacity/",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"ofsc/models/__init__.py" = ["E402"]

[tool.pytest_env]
RUN_ENV = 1
